# SteamParser

./: .gitignore  DotaAPI.cpp  DotaAPI.h  ReadMe.txt  SteamParser.cpp  SteamParser.sln  SteamParser.vcxproj  auto_make  config.h  configure.ac  stdafx.cpp  stdafx.h
src/: Makefile.am  Parser.cpp  Parser.h  SteamParser.cpp  stdafx.h
