# what flags you want to pass to the C compiler & linker
CXXFLAGS = --pedantic -Wall -std=c99 -O2
LDFLAGS = -lm

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = SteamParser
SteamParser_SOURCES = SteamParser.cpp Parser.cpp DotaApi.cpp stdafx.cpp

